review all alignment of central tabs; fix #7671

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1374,7 +1374,7 @@ div.rss {
    margin-left: 10px;
 }
 
-td {
+td, th {
    &.numeric {
       text-align: right;
    }
